# langchain-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  main.py  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
src/langchain_agent/: __init__.py  cli.py  config.py
src/langchain_agent/agent/: __init__.py  chains.py  parsers.py  planner.py  prompts.py
src/langchain_agent/agent/tools/: __init__.py  example_tool.py
tests/: test_smoke.py
